# validation-of-fair-classifiers

./: 1. Exploratory Data Analysis.ipynb  2. Modelling.ipynb  3. Cut-off Agnostic Metrics.ipynb  4. Cut-off Dependent Metrics.ipynb  README.md  mintty.exe.stackdump  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest.yml
data/: aequitas_output.csv  model_output_biased.csv  model_output_unbiased.csv  pct_score_difference.xlsx
presentation/: methods_to_validate_fair_classifiers.pptx
tests/: test_analysis.py
utils/: fairness_functions.py
