[project]
name = "validation-of-fair-classifiers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aequitas==0.42.0",
    "ipykernel>=6.29.5",
    "matplotlib==3.8.0",
    "nbformat>=5.10.4",
    "numpy==1.26.0",
    "pandas==1.5.3",
    "plotly>=6.0.1",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "seaborn==0.12.2",
]
